Wire Formspree waitlist form

--- a/site/index.html
+++ b/site/index.html
@@ -779,7 +779,7 @@
   <div class="waitlist-box animate-in">
     <h2>Be first to get Pro.</h2>
     <p>We're building sync, the visual dashboard, and team features based on what our users want most. Join the waitlist to help shape what comes next — and get early access when it's ready.</p>
-    <form class="waitlist-form" id="waitlistForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <form class="waitlist-form" id="waitlistForm" action="https://formspree.io/f/xqednjje" method="POST">
       <input type="email" name="email" class="waitlist-input" placeholder="you@email.com" required id="waitlistEmail">
       <input type="hidden" name="_subject" value="New Lockbox Pro Waitlist Signup">
       <button type="submit" class="waitlist-submit">Join Waitlist</button>
