--- a/site/index.html
+++ b/site/index.html
@@ -461,7 +461,7 @@
   <p class="hero-sub">Lockbox keeps your API keys encrypted in one place. Your AI coding tools can use them without ever seeing the actual values. And if your code accidentally hits GitHub? Nothing leaks.</p>
 
   <div class="hero-actions">
-    <a href="#install" class="btn-primary">
+    <a href="https://www.npmjs.com/package/lockbox-vault" target="_blank" class="btn-primary">
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="4 17 10 11 4 5"/><line x1="12" y1="19" x2="20" y2="19"/></svg>
       Get Started Free
     </a>
@@ -739,7 +739,7 @@
         <li>16 CLI commands</li>
         <li>Open source (MIT licence)</li>
       </ul>
-      <a href="#install" class="price-btn price-btn-free">Install Now — 30 Seconds</a>
+      <a href="https://www.npmjs.com/package/lockbox-vault" target="_blank" class="price-btn price-btn-free">Install Now — 30 Seconds</a>
     </div>
     <div class="price-card featured">
       <div class="price-name">Pro</div>
@@ -785,7 +785,7 @@
       <button type="submit" class="waitlist-submit">Join Waitlist</button>
     </form>
     <div class="waitlist-success" id="waitlistSuccess">✓ You're on the list! We'll be in touch.</div>
-    <div class="waitlist-count">The free version is ready right now — <a href="#install" style="color:var(--accent);text-decoration:none;">install in 30 seconds</a></div>
+    <div class="waitlist-count">The free version is ready right now — <a href="https://www.npmjs.com/package/lockbox-vault" target="_blank" style="color:var(--accent);text-decoration:none;">installion:none;">install in 30 seconds</a></div>
   </div>
 </section>
 
