Fix duplicate link and point install to npm

--- a/site/index.html
+++ b/site/index.html
@@ -785,7 +785,7 @@
       <button type="submit" class="waitlist-submit">Join Waitlist</button>
     </form>
     <div class="waitlist-success" id="waitlistSuccess">✓ You're on the list! We'll be in touch.</div>
-    <div class="waitlist-count">The free version is ready right now — <a href="https://www.npmjs.com/package/lockbox-vault" target="_blank" style="color:var(--accent);text-decoration:none;">installion:none;">install in 30 seconds</a></div>
+    <div class="waitlist-count">The free version is ready right now — <a href="https://www.npmjs.com/package/lockbox-vault" target="_blank" style="color:var(--accent);text-decoration:none;">install in 30 seconds</a></div>
   </div>
 </section>
 
